# eidra

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
config/: default.yaml
config/policies/: default.yaml
crates/eidra-audit/: Cargo.toml
crates/eidra-audit/src/: error.rs  event.rs  lib.rs  store.rs
crates/eidra-core/: Cargo.toml
crates/eidra-core/src/: main.rs  runtime.rs
crates/eidra-core/src/commands/: config.rs  dashboard.rs  doctor.rs  escape.rs  gateway.rs  init.rs  join.rs  launch.rs  mod.rs  scan.rs  setup.rs  start.rs  stop.rs
crates/eidra-identity/: Cargo.toml
crates/eidra-identity/src/: credential.rs  error.rs  identity.rs  lib.rs
crates/eidra-mcp/: Cargo.toml
crates/eidra-mcp/src/: config.rs  error.rs  gateway.rs  handler.rs  lib.rs
crates/eidra-policy/: Cargo.toml
crates/eidra-policy/src/: engine.rs  error.rs  lib.rs  loader.rs  types.rs
crates/eidra-proxy/: Cargo.toml
crates/eidra-proxy/src/: ai_domains.rs  error.rs  handler.rs  lib.rs  server.rs  tls.rs
crates/eidra-router/: Cargo.toml
crates/eidra-router/src/: error.rs  lib.rs  masking.rs  ollama.rs
crates/eidra-scan/: Cargo.toml
crates/eidra-scan/src/: classifier.rs  findings.rs  lib.rs  scanner.rs
crates/eidra-scan/src/rules/: builtin.rs  custom.rs
crates/eidra-seal/: Cargo.toml
crates/eidra-seal/src/: entry.rs  error.rs  lib.rs  seal.rs
crates/eidra-transport/: Cargo.toml
crates/eidra-transport/src/: crypto.rs  error.rs  lib.rs  room.rs  types.rs
crates/eidra-tui/: Cargo.toml
crates/eidra-tui/src/: app.rs  event.rs  ui.rs
docs/: README.ar.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.ko.md  README.pt.md  README.ru.md  README.zh.md  architecture.md  contributing.md  eidra-review.md  for-developers.md  for-everyone.ja.md  for-everyone.md  launch-checklist.md  marketing-strategy.md  media-kit.md  messaging-house.md  outreach.md  social-content.md  use-cases.ja.md  use-cases.md  what-is-eidra.md
docs/launch/: for-beginners.md  github-launch-kit.md  hn-post.md  product-descriptions.md
scripts/: demo-dashboard.sh  demo-full.tape  demo-readme.tape  demo-tui.tape  demo.sh  demo.tape  generate_hero_banner.py  generate_social_preview.py  install.sh
sdks/eidra-rs/: Cargo.toml
sdks/eidra-rs/src/: lib.rs
tests/fixtures/requests/: anthropic_message_with_pii.json  openai_chat_clean.json  openai_chat_with_aws_key.json
