[workspace]
resolver = "2"
members = [
    "crates/eidra-core",
    "crates/eidra-proxy",
    "crates/eidra-scan",
    "crates/eidra-policy",
    "crates/eidra-router",
    "crates/eidra-mcp",
    "crates/eidra-transport",
    "crates/eidra-identity",
    "crates/eidra-seal",
    "crates/eidra-audit",
    "crates/eidra-tui",
    "sdks/eidra-rs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/hanabi-jpn/eidra"
description = "Edge-native trust for humans, agents, and machines."

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1"] }
http-body-util = "0.1"
rustls = "0.23"
rcgen = "0.13"
tokio-rustls = "0.26"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.29"
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"] }
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
webrtc = "0.12"
thiserror = "2"
anyhow = "1"
