[package]
name = "eidra-policy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }

eidra-scan = { path = "../eidra-scan" }
