[package]
name = "eidra-transport"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
zeroize = { workspace = true }
